# TryOut

./: CMakeLists.txt  README.md  build  clean
NSIS64/: NSIS.InstallOptions.ini  project.nsi
NSIS64/CPackTest-1.2.3-Linux/testforCPPTutorial/: CPPTutorial
cpp-tutorial/: CMakeLists.txt  Makefile  README.md
cpp-tutorial/bitbake/meta-cpptutorial/conf/: bitbake.conf  layer.conf
cpp-tutorial/bitbake/meta-cpptutorial/recipes-cpptutorial/: cpp-tutorial-test.bb  cpp-tutorial.bb
cpp-tutorial/include/db/: OpenTextFile.h
cpp-tutorial/include/mngr/: LocalStorage.h  StudentsManager.h
cpp-tutorial/include/model/: Student.h
cpp-tutorial/include/ui/: UserInterface.h
cpp-tutorial/include/utils/: Utils.h
cpp-tutorial/src/: main.cpp
cpp-tutorial/test/: CMakeLists.txt  main.cpp
src/: main.cpp
